--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@
 .main-header .main-box .logo-box .logo img{
   position: relative;
   display: block;
-  height: 46px;
+  height: 100px;
   z-index: 1;
 }
 
@@ -1425,6 +1425,7 @@ body.visible-sidebar{
   top: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
   z-index: 1;
 }
 
