map, index, page updated

--- a/css/style.css
+++ b/css/style.css
@@ -4420,7 +4420,7 @@ body.visible-sidebar{
   content: "";
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background: url(../images/background/reservation-bg.jpg);
+  background: url(../images/main-slider/slider3.webp);
   background-attachment: scroll;
   background-size: cover;
   opacity: 0.2; /* Keep it 1 if you already fade via gradient */
