--- a/css/style.css
+++ b/css/style.css
@@ -6688,6 +6688,19 @@ footer .bottom_footer .social_media li a:hover {
   bottom: 10px;
   border: 1px solid var(--main-color);
   border-radius: 500px 500px 0 0;
+  z-index: 2;
+}
+
+.contact-page .loc-block .contact-image::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 500px 500px 0 0;
+  z-index: 2;
   pointer-events: none;
   z-index: 2;
   box-sizing: border-box;
