changes asked by client

--- a/css/style.css
+++ b/css/style.css
@@ -5027,19 +5027,19 @@ footer .bottom_footer .social_media li a:hover {
 }
 
 .menu-cat .menucat-list.menubg1:hover {
-  background:url(../images/background/menu1.jpg) no-repeat;
+  background:url(../images/background/desserter.webp) no-repeat;
 }
 
 .menu-cat .menucat-list.menubg2:hover {
-  background:url(../images/background/menu2.jpg) no-repeat;
+  background:url(../images/background/fatayer.webp) no-repeat;
 }
 
 .menu-cat .menucat-list.menubg3:hover {
-  background:url(../images/background/menu3.jpg) no-repeat;
+  background:url(../images/background/hovedretter.webp) no-repeat;
 }
 
 .menu-cat .menucat-list.menubg4:hover {
-  background:url(../images/background/menu4.jpg) no-repeat;
+  background:url(../images/background/mazzah.webp) no-repeat;
 }
 
 .menu-cat .menucat-list .image-box img {
